[package]
name = "chapters" #with this name will be published to crates.io
version = "0.1.0"
edition = "2021"
description = "Self study over rust book"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#how many optimizations will be
#cargo build
[profile.dev]
opt-level = 0

#cargo build --release
[profile.release]
opt-level = 3

[dependencies]
rand = "0.9.0-alpha.1"